--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <link rel="stylesheet" 
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+        <link rel="stylesheet"
+        href="styles.css">
     </head>
     <body>
         <nav>
