--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <link rel="stylesheet"
         href="styles.css">
+        <script src="script.js"></script>
     </head>
     <body>
+        <div class="container" data-theme="dark">
+        <!--dark theme container begins-->
         <nav>
         <div class="navbar">
             <!--toggle button div-->
@@ -20,7 +23,7 @@
                 <a href="#">Gmail</a>
                 <a href="#">Images</a>
                 <a href="#">
-                    <span class="material-symbols-outlined">
+                    <span id="g-apps" class="material-symbols-outlined">
                         apps
                     </span>
                 </a>
@@ -89,6 +92,6 @@
             </div>
         </div>
     </footer><!--Footer ends-->
-   
+</div><!--dark theme container ends-->
 </body>
 </html>
