--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" 
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <link rel="stylesheet"
         href="styles.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
         <script src="script.js"></script>
     </head>
     <body>
-        <header class="header">
         <nav>  
-            <ul class="r_nav">  
+            <ul class="r_nav">
+            <li>
+            <div class="switch">Dark mode:              
+                <span class="inner-switch">OFF</span>
+            </div>
+            </li>  
              <li><a href="#">Gmail</a></li>  
              <li><a href="#">Images</a></li>  
              <li><a href="#"><span class="material-symbols-outlined apps">
@@ -20,7 +27,7 @@
              <li class="sign_in"><a href="#">Sign in</a></li>  
             </ul>  
            </nav>  
-        </header>
+        
         <section class="cntr_pg">  
             <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo" />  
             <img class="mic" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_microphone_logo.png" alt="" />  
