--- a/index.html
+++ b/index.html
@@ -8,16 +8,21 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
         <link rel="stylesheet"
         href="styles.css">
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
         <script src="script.js"></script>
     </head>
-    <body>
+    <body class="light-theme">
+        <header>
         <nav>  
             <ul class="r_nav">
             <li>
-            <div class="switch">Dark mode:              
-                <span class="inner-switch">OFF</span>
-            </div>
+                <label class="switch">
+                    <i class="fas fa-adjust"></i>
+                    <div>
+                      <input type="checkbox" />
+                      <span class="slider round"></span>
+                    </div>
+                  </label>
             </li>  
              <li><a href="#">Gmail</a></li>  
              <li><a href="#">Images</a></li>  
@@ -27,7 +32,7 @@
              <li class="sign_in"><a href="#">Sign in</a></li>  
             </ul>  
            </nav>  
-        
+        </header>
         <section class="cntr_pg">  
             <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo" />  
             <img class="mic" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_microphone_logo.png" alt="" />  
