--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" 
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <link rel="stylesheet"
-        href="styles.css">
+        <link id="theme" rel="stylesheet" type="text/css" href="light-theme.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
         <script src="script.js"></script>
     </head>
@@ -16,13 +15,7 @@
         <nav>  
             <ul class="r_nav">
             <li>
-                <label class="switch">
-                    <i class="fas fa-adjust"></i>
-                    <div>
-                      <input type="checkbox" />
-                      <span class="slider round"></span>
-                    </div>
-                  </label>
+            <button id="theme-toggle">Switch to dark mode</button>
             </li>  
              <li><a href="#">Gmail</a></li>  
              <li><a href="#">Images</a></li>  
