changed colours in dark theme

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>  
             <ul class="r_nav">
             <li>
-            <button id="theme-toggle">Switch to dark mode</button>
+            <button id="theme-toggle">dark mode</button>
             </li>  
              <li><a href="#">Gmail</a></li>  
              <li><a href="#">Images</a></li>  
@@ -35,7 +35,21 @@
               <input class="submit_buttons" type="submit" value="Google Search" name="submit">  
               <input class="submit_buttons" type="submit" value="I'm Feeling Lucky" name="feelinglucky"></input>  
              </div>  
-            </form>  
+            </form>
+            <div class="Bottomdiv">
+                <span>Google offered in:</span>
+                <ul>
+                  <li><a href="">हिन्द</a>ी</li>
+                  <li><a href="">বাংলা</a></li>
+                  <li><a href="">తెలుగు</a></li>
+                  <li><a href="">मराठी</a></li>
+                  <li><a href="">தமிழ்</a></li>
+                  <li><a href="">ગુજરાતી</a></li>
+                  <li><a href="">ಕನ್ನಡ</a></li>
+                  <li><a href="">മലയാളം</a></li>
+                  <li><a href="">ਪੰਜਾਬੀ</a></li>
+                </ul>
+              </div>  
         </section> 
         
         <footer>  
