dark theme changes

--- a/html&css ONLY/index.html
+++ b/html&css ONLY/index.html
@@ -27,7 +27,7 @@
            </nav>  
         </header>
         <section class="cntr_pg">  
-            <img class="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo" />  
+            <img class="logo" id="logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo" />  
             <img class="mic" src="https://upload.wikimedia.org/wikipedia/commons/2/22/Google_microphone_logo.png" alt="" />  
             <form action="#" method="#" name="searchquery">  
              <input type="text" name="searchfield" class="search_bar"></input>  
