--- a/Bootstrap_Version/index.html
+++ b/Bootstrap_Version/index.html
@@ -3,20 +3,33 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+        <link 
+        rel="stylesheet"
+        href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" 
+        integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" 
+        crossorigin="anonymous">
         <link rel="stylesheet" 
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
+        <link id="dark-theme-style" rel="stylesheet" />
+
+        <style>
+            body {
+                font-size: 13px;
+            }
+        </style>
+        
     </head>
 
     <body>
         <!--nav Bar-->
-        <nav class="navbar navbar-expand-sm justify-content-end pb-5">
+        <nav class="navbar navbar-expand-sm justify-content-end pb-5 navbar-transparent">
             <ul class="navbar-nav"> <!-- navbar items -->
-                <li class="nav-item"><a class="nav-link">
-                    <button id="theme-toggle" class="btn-dark">dark mode</button>
+                <li class="nav-item">
+                    <a
+                    href="javascript:void()"
+                    class="btn btn-outline-dark btn-sm ml-auto nav-link"
+                    id="theme-toggler"
+                    onclick="toggleTheme()">
                 </a></li>
                 <li class="nav-item"><a class="nav-link">Gmail</a></li>
                 <li class="nav-item"><a class="nav-link">Images</a></li>
@@ -31,8 +44,8 @@
         </nav>
         <main>
             <div class="container align-content-center">
-                <div class="logo d-flex justify-content-center"><!-- Main Google Logo -->
-                    <img class="pb-3" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
+                <div class="d-flex justify-content-center"><!-- Main Google Logo -->
+                    <img class="pb-3" id="Mainlogo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google logo">
                 </div>
                 <div class="searchbar"><!-- Search bar -->
                     <form class="form-inine" role="form">
@@ -54,6 +67,7 @@
                     
                     <span class="">Google offered in:</span>
                     <ul class="list-inline ">
+                        <li class="list-inline-item"><a href="">   </a></li>
                         <li class="list-inline-item"><a href="">हिन्द</a>ी</li>
                         <li class="list-inline-item"><a href="">বাংলা</a></li>
                         <li class="list-inline-item"><a href="">తెలుగు</a></li>
@@ -67,5 +81,21 @@
                 </div>
             </div>
         </main>
+        <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
+    <script src="index.js"></script>
     </body>
 </html>
